@@ -41,6 +41,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Misc Improvements
 - Terminal console no longer appears in front of the game window on startup
+- `gui/design`: Improved performance for drawing shapes
 
 ## Documentation
 
